--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header class="header"></header>
         <main class="content">
             <section class="recepies"></section>
-            <section class="reservation"><p></fieldset></p></section>
+            <section class="reservation"></section>
             <section class="menu"></section>
             <section class="about"></section>
         </main>
