updated meta tags

--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>coffee shop</title>
-     <meta name="description" content="a place to join in the love of coffe with others. and connect with your peers">
-    <meta name="author" content="Dennis Batista">
-    <meta name="key-words" content="coffee, tripple ten, tripple expreso, coffee recipes">
-    <link rel="stylesheet" href="./vendor/normalize.css">
-    <link rel="stylesheet" href="./pages/index.css">
-    <link rel="shortcut icon" href="./favicon_coffee_bean.ico" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>coffe shop</title>
+  <meta name="description" content="Triple Ten Coffee is your cozy corner to enjoy exceptional espresso, share coffee recipes, and connect with fellow coffee lovers.">
+  <meta name="author" content="Dennis Batista">
+  <meta name="keywords" content="coffee, Triple Ten, triple espresso, coffee recipes, coffee community,">
+  <meta name="robots" content="index, follow">
+  <link rel="stylesheet" href="./vendor/normalize.css">
+  <link rel="stylesheet" href="./pages/index.css">
+  <link rel="shortcut icon" href="./favicon_coffee_bean.ico" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
  <body>
