--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="a place to join in the love of coffe with others. and connect with your peers">
+    <meta name="description" content="a place to join in the love of coffee with others. and connect with your peers">
     <meta name="author" content="Dennis Batista">
-    <meta name="key-words" content="coffee, tripple ten, tripple expreso, coffee recepies">
-    <title>coffee shop</title>
+    <meta name="keywords" content="coffee, triple ten, triple expresso, coffee recipes">
+    <title>Coffee Shop</title>
     <link rel="stylesheet" href="./vendor/normalize.css">
     <link rel="stylesheet" href="./pages/index.css">
     <link rel="shortcut icon" href="./favicon_coffee_bean.ico" type="image/x-icon">
@@ -19,7 +19,7 @@
     <div class="page">
         <header class="header"></header>
         <main class="content">
-            <section class="recepies"></section>
+            <section class="recipes"></section>
             <section class="reservation"></section>
             <section class="menu"></section>
             <section class="about"></section>
