--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                  in the Triple Peaks Library
             </h1>
             <p class="header__description">Welcome to our study zone! We've got the coffee to energize you and the cozy vibes to help you get creative.</p>
-            <img src="./images/inside_coffee_shop.png" alt="Interior view of a cozy coffee shop" class="header__image">
+            <img src="./images/inside_coffee_shop.png" alt="picture of a coffee shop" class="header__image">
             <div class="header__footer">
                 <div>
               <p class="header__paragraph">Hours:</p>
@@ -56,18 +56,18 @@
                 <h2 class="recipes__title">Recipes</h2>
                 <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenience:</p>
                 <ul class="recipes__videos">
-                   <li class="recipes__iframe">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=Aj63ZAnSeq-HLHjs" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                   <li >
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=Aj63ZAnSeq-HLHjs" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="recipes__iframe"></iframe>
                     <p class="recipes__video-caption"> <span> Aeropress recipe</span><span>~5 min</span></p>
                    </li>
                 
-                   <li class="recipes__iframe">
-                   <iframe width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=CnC5l9GRQaWkLBE5" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                   <li>
+                   <iframe width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=CnC5l9GRQaWkLBE5" title="YouTube vi6deo player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="recipes__iframe"></iframe>
                     <p class="recipes__video-caption"><span>French press recipe</span><span>~15 min</span></p>
                    </li>
                 </ul>
          </section>
-            <section class="" id="reservation"></section>
+            <section class="reservation" id="reservation"></section>
             <section class="menu" id="menu"></section>
             <section class="about" id="about"></section>
         </main>
