linked the sections

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a class="nav__link" href="#recipes">Recipes</a>
                     </li>
                       <li>
-                        <a class="nav__link" href="#Reservation" >Book a table</a>
+                        <a class="nav__link" href="#reservation">Book a table</a>
                     </li>
                       <li>
                         <a class="nav__link" href="#menu">Menu</a>
