--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a class="nav__link" href="#recipes">Recipes</a>
                     </li>
                       <li>
-                        <a class="nav__link" href="#reservation">Book a table</a>
+                        <a class="nav__linkrequired#reservation">Book a table</a>
                     </li>
                       <li>
                         <a class="nav__link" href="#menu">Menu</a>
@@ -67,7 +67,54 @@
                    </li>
                 </ul>
          </section>
-            <section class="reservation" id="reservation"></section>
+            <section class="reservation" id="reservation">
+              <h2 class="reservation__title">book a table</h2>
+              <form class="reservation__form form">
+                <fieldset class="form__fieldset">
+                <label class="form__label" for="name-input">
+                    name * 
+                    <input type="text" class="form__input" 
+                    required 
+                    placeholder="name surname"
+                    id="name-input">
+                </label>
+                 <label class="form__label" for="number-input">
+                    number of guests* 
+                    <input type="number"
+                     class="form__input" 
+                    required
+                    placeholder="1-8"
+                    min="1"
+                    max="8"
+                    id="number-input">
+                    
+                </label>
+                 <label class="form__label" for="date-input">
+                    date & time * 
+                    <input type="datetime-local" 
+                    required
+                    class="form__input" 
+                    id="date-input">
+                 </label>
+                 <label class="form__label" for="email-input">
+                    your email *
+                    <input type="email" 
+                    class="form__input" 
+                    required
+                    placeholder="email@email.com"
+                    id="email-input">
+                </label>
+            </fieldset>
+            <button class="form__button">book a table</button>
+                 <label class="form__label form__label_type_checkbox" for="checkbox-input">
+                  
+                    <input class="form__checkbox " 
+                    type="checkbox"
+                    id="checkbox-input" >
+                    i agree to the terms of use
+                 </label>
+              </form>
+            </section>
             <section class="menu" id="menu"></section>
             <section class="about" id="about"></section>
         </main>
