--- a/index.html
+++ b/index.html
@@ -121,31 +121,31 @@
                     <li class="card">
                         <h3 class="card__title">Filter</h3>
                         <ul class="card__list">
-                            <li class="card__list_item">Regular (12 oz) <span class="card__list_divider"></span> $1</li>
-                            <li class="card__list_item">Large (16 oz) <span class="card__list_divider"></span> $1.25</li>
-                            <li class="card__list_item">XL (20 oz) <span class="card__list_divider"></span> $1.5</li>
-                            <li class="card__list_item">Party-size (24 oz, decaf) <span class="card__list_divider"></span> $1.75</li>
-                            <li class="card__list_item">Iced Coffee (16 oz) <span class="card__list_divider"></span> $1.25</li>
+                            <li class="card__list-item">Regular (12 oz) <span class="card__list_divider"></span> $1</li>
+                            <li class="card__list-item">Large (16 oz) <span class="card__list_divider"></span> $1.25</li>
+                            <li class="card__list-item">XL (20 oz) <span class="card__list_divider"></span> $1.5</li>
+                            <li class="card__list-item">Party-size (24 oz, decaf) <span class="card__list_divider"></span> $1.75</li>
+                            <li class="card__list-item">Iced Coffee (16 oz) <span class="card__list_divider"></span> $1.25</li>
                         </ul>
                     </li>
                        <li class="card">
                         <h3 class="card__title">Espresso</h3>
                         <ul class="card__list">
-                            <li class="card__list_item">Regular (12 oz) <span class="card__list_divider"></span> $1</li>
-                            <li class="card__list_item">Large (16 oz) <span class="card__list_divider"></span> $1.25</li>
-                            <li class="card__list_item">XL (20 oz) <span class="card__list_divider"></span> $1.5</li>
-                            <li class="card__list_item">Party-size (24 oz, decaf) <span class="card__list_divider"></span> $1.75</li>
-                            <li class="card__list_item">Iced Coffee (16 oz) <span class="card__list_divider"></span> $1.25</li>
+                            <li class="card__list-item">Regular (12 oz) <span class="card__list_divider"></span> $1</li>
+                            <li class="card__list-item">Large (16 oz) <span class="card__list_divider"></span> $1.25</li>
+                            <li class="card__list-item">XL (20 oz) <span class="card__list_divider"></span> $1.5</li>
+                            <li class="card__list-item">Party-size (24 oz, decaf) <span class="card__list_divider"></span> $1.75</li>
+                            <li class="card__list-item">Iced Coffee (16 oz) <span class="card__list_divider"></span> $1.25</li>
                         </ul>
                     </li>
                        <li class="card">
                         <h3 class="card__title">Baked Goods</h3>
                         <ul class="card__list">
-                            <li class="card__list_item">Regular (12 oz)<span class="card__list_divider"></span> $1</li>
-                            <li class="card__list_item">Large (16 oz) <span class="card__list_divider"></span> $1.25</li>
-                            <li class="card__list_item">XL (20 oz) <span class="card__list_divider"></span> $1.5</li>
-                            <li class="card__list_item">Party-size (24 oz, decaf) <span class="card__list_divider"></span> $1.75</li>
-                            <li class="card__list_item">Iced Coffee (16 oz) <span class="card__list_divider"></span> $1.25</li>
+                            <li class="card__list-item">Regular (12 oz)<span class="card__list_divider"></span> $1</li>
+                            <li class="card__list-item">Large (16 oz) <span class="card__list_divider"></span> $1.25</li>
+                            <li class="card__list-item">XL (20 oz) <span class="card__list_divider"></span> $1.5</li>
+                            <li class="card__list-item">Party-size (24 oz, decaf) <span class="card__list_divider"></span> $1.75</li>
+                            <li class="card__list-item">Iced Coffee (16 oz) <span class="card__list_divider"></span> $1.25</li>
                         </ul>
                     </li>
                 </ul>
@@ -169,10 +169,10 @@
             <div class="footer__column">
                     <h3 class="footer__column-heading">Social Media</h3>
                        <ul class="footer__list">
+                    <li class="footer__list-item">
+                        <a href="#" class="footer__social-link"><img src="./images/facebook_white.svg" alt="facebook logo" class="footer__social_icon" >Facebook</a></li>
                     <li class="footer__list_item">
-                        <a href="#" class="footer__social_link"><img src="./images/facebook_white.svg" alt="facebook logo" class="footer__social_icon" >Facebook</a></li>
-                    <li class="footer__list_item">
-                        <a href="#" class="footer__social_link"><img src="./images/instagram_white.svg" alt="Instagram logo" class="footer__social_icon">Instagram</a>
+                        <a href="#" class="footer__social-link"><img src="./images/instagram_white.svg" alt="Instagram logo" class="footer__social_icon">Instagram</a>
                     </li>
                 </ul>
             </div>
