madde the changes as instructed

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
                  <label class="form__label form__label_type_checkbox" for="checkbox-input">          
                     <input class="form__checkbox " 
                     type="checkbox"
-                    id="checkbox-input" >
+                    id="checkbox-input"
+                    required >
                     i agree to the terms of use
                  </label>
               </form>
